<resources>
    <string name="app_name">MyZenCoach</string>
    <string name="OK">OK</string>
    <string name="loading_message">Loading…</string>
    <string name="error_message">Error in uploading data</string>
    <string name="error_icon_description">An error occured</string>
    <string name="loading_more_data">Loading more data...</string>
    <string name="opened">Opened</string>
    <string name="closed">Closed</string>
    <string name="customize">Customize</string>
    <string name="essential_information">Essential information</string>
    <string name="cooperative_solutions">Cooperative solutions</string>
    <string name="welfare">Welfare/Mindfulness</string>
    <string name="leisure">Leisure</string>
    <string name="stress_detection">Stress detector</string>
    <string name="reminders">Reminders</string>
    <string name="puntuaction">Your mark is:</string>
    <string name="login">Login</string>
    <string name="interests">Interests</string>
    <string name="videos">Videos</string>
    <string name="tests">Tests</string>
    <string name="ranking">Ranking</string>
    <string name="my_dilemmas">My dilemmas - posted</string>
    <string name="homepage">All dilemmas</string>
    <string name="coach">Coach</string>
    <string name="weekly_exercise">Weekly excercise</string>
    <string name="rate">Rating</string>
    <string name="profil">Profile</string>
    <string name="logout">Logout</string>
    <string name="REMAINDERS_HELLO_USER">Hello</string>
    <string name="REMAINDERS_TASK_REMAIN">Tasks to pass to the next level</string>
    <string name="REMAINDERS_YOUR_TASK">Your tasks</string>
    <string name="REMAINDERS_MASK_AS_DONE">Mark as completed</string>
    <string name="stress_add">Add questions</string>
    <string name="STRESS_QUESTION_ADD">Question</string>
    <string name="STRESS_OPTION_1">Option 1</string>
    <string name="STRESS_OPTION_2">Option 2</string>
    <string name="STRESS_OPTION_3">Option 3</string>
    <string name="STRESS_OPTION_4">Option 4</string>
    <string name="STRESS_TIPS">Option 1 - blue, Option 2 - yellow, Option 3 - red, Option 4 - orange</string>
    <string name="REMAINDERS_LEVEL">LEVEL:</string>
    <string name="week_info">week: %1$d</string>
    <string name="remainders_add">New Reminder</string>
    <string name="REMAINDERS_ADD_TITLE">Title</string>
    <string name="REMAINDERS_ADD_DESCRIPTION">Description of reminder</string>
    <string name="REMAINDERS_ADD_WHEN">date of reminder</string>
    <string name="REMAINDERS_ADD_INSERT_DATE">Enter date</string>
    <string name="REMAINDERS_ADD_WHEN_HOUR">Time of reminder</string>
    <string name="REMAINDERS_ADD_INSERT_TIME">enter time</string>
    <string name="SAVE">Save</string>
    <string name="title_activity_add_remainder">AddRemainderActivity</string>
    <string name="REMAINDERS_NO_REMAINDER">We\'re sorry, new reminders aren\'t available yet</string>
    <string name="REMAINDERS_ADD_COMENT">Add Observations</string>
    <string name="title_activity_add_observations">AddObservations</string>
    <string name="remainders_add_observations">Add observations</string>
    <string name="REMAINDERS_OBSERVATIONS">Observations</string>
    <string name="STRESS_GETCOACHRESPONSE">Get coach response</string>
    <string name="STRESS_NORESPONSE">Response message has not been defined by the coach yet</string>
    <string name="REMAINDERS_NO_Stress">We\'re sorry but there are currently no questions</string>
    <string name="score_info">%1$d Mark</string>
    <string name="completed">Completed</string>
    <string name="uncompleted">Pending</string>
    <string name="question_number">Question %1$d out of %2$d</string>
    <string name="test_name">Test: %1sd</string>
    <string name="send_to_rate">Submit for rating</string>
    <string name="no_available_test">There are no available tests for this video. Please finish watching this video to have access to its correspondent test.</string>
    <string name="error_update_video">Could not update video settings</string>
    <string name="test_completed_dialog">Your test has been saved and submitted. You can retake this test as many times as you wish</string>
    <string name="dialog_massage_no_youtube_url_video">Video URLs are supported in a YouTube URL format only. Please, contact your coach to solve this issue. We apologise for any inconvenience</string>
    <string name="message_no_video">No coach-recommended videos are available yet</string>
    <string name="message_no_ranking">Ranking not available</string>
    <string name="message_title_no_answer_video">Coach´s error found</string>
    <string name="message_description_no_answer_video">Every question must have 3 possible answers. Please, contact your coach to solve this issue. We apologise for any inconvenience</string>
    <string name="write_feedback">Please leave feedback on your preferred solution</string>
    <string name="message_no_my_dilemmas">There is not any dilemma coach has accepted</string>
    <string name="message_no_coach_dilemmas">There is not any dilemma waiting for your coach´s answer</string>
    <string name="message_no_muro_dilemmas">There is no dilemma yet</string>
    <string name="number_solutions_plural">%1$d solutions</string>
    <string name="number_solutions_singular">1 solution</string>
    <string name="message_no_solutions">No solutions have been offered yet</string>
    <string name="suggestion_coach">Coach\'s suggestions:</string>
    <string name="dilemma_title">Dilemma\'s title</string>
    <string name="dilemma_description">Describe your dilemma...</string>
    <string name="save_dilemma">Save dilemma</string>
    <string name="update_dilemma">Edit dilemma</string>
    <string name="alert_fill_out_fields">Please enter a title and description of the dilemma you want to share</string>
    <string name="alert_title_dilemma_sent">Your dilemma has been sent</string>
    <string name="alert_title_dilemma_updated">Edited dilemma</string>
    <string name="alert_message_dilemma_sent">Your coach will answer as soon as possible. Thank you for sharing!</string>
    <string name="solution">Solution</string>
    <string name="solution_hint">Enter your dilemma-solving advise</string>
    <string name="pros">Pros</string>
    <string name="pros_hint">Write briefly at least a pro</string>
    <string name="cons">Cons</string>
    <string name="cons_hint">Write briefly at least a con</string>
    <string name="save_solution">Save solution</string>
    <string name="alert_fill_out_all_fields">Please fill in all of the fields</string>
    <string name="alert_title_solution_added">Solution added</string>
    <string name="alert_message_solution_added">Thank you for helping your colleagues!</string>
    <string name="feedback_dilemma">Feedback</string>
    <string name="alert_fill_out_feedback">Please leave your feedback</string>
    <string name="alert_title_feedback_completed">Dilemma completed</string>
    <string name="alert_description_feedback_completed">Thank you for leaving your feedback. We hope it solved your dilemma.</string>
    <string name="alert_like">Please, put the selected proposal into practise and leave your feedaback possibly within a week</string>
    <string name="feedback"><b>Feedback:</b> %1$s</string>
    <string name="state_waiting_for_answer">Awaiting coach\'s answer</string>
    <string name="state_refused">Declined\nSee coach\'s suggestions...</string>
    <string name="state_acepted">Help me fix it</string>
    <string name="state_feedback_1">Awaiting feedback</string>
    <string name="state_feedback_2">A week has passed. Please submit your feedback</string>
    <string name="state_completed">Finished</string>
    <string name="choose_plan">Select your plan</string>
    <string name="ongoing_plan">Ongoing</string>
    <string name="choose_ongoing_one">You can only select ongoing plans</string>
    <string name="week_number">Week %1d</string>
    <string name="question_answer">Write your answer</string>
    <string name="exercise_rate_number">How would you rate the exercise</string>
    <string name="exercise_rate_string">Please leave your feedback about the exercise.</string>
    <string name="send_survey">Send survey</string>
    <string name="dialog_title_survey_sent">Completed exercise</string>
    <string name="dialog_title_survey_sent_plan_over">Completed plan and exercise</string>
    <string name="dialog_message_survey_sent"> Well done! You\'ve completed weekly exercise. Thanks for submitting the survey</string>
    <string name="dialog_message_survey_sent_over">Well down! You\'ve completed your weekly exercise and plan. Thanks for submitting the survey</string>
    <string name="alert_plan_chosen">The plan selected has been added to your preferences. The plans list will be visible once you finalize this plan or after logout</string>
    <string name="error_update_survey">Error on saving survey</string>
    <string name="alert_check_fields_empty">Please answer to every question</string>
    <string name="dialog_title_url_no_valid">The URL is not valid</string>
    <string name="dialog_massage_no_youtube_url_audio">Audio URLs are supported in a YouTube URL format only. Please, contact your coach to solve this issue. We apologise for any inconvenience</string>
    <string name="dialog_message_no_plans_available">There aren\'t  available plans at the moment.\nPlease wait until further plans will be available for use. We\'re sorry for any inconvenience</string>
    <string name="alert_error_audio">Error in loading this audio</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="title">Title</string>
    <string name="description">Description. What\'s on your mind?</string>
    <string name="category">Select category</string>
    <string name="post">Post</string>
    <string name="public_homepage">Homepage</string>
    <string name="set_up_your_interests">Select your major interests types</string>
    <string name="save_interests">Save interests</string>
    <string name="write_comment">Write a comment...</string>
    <string name="number_comments">%1$d comments</string>
    <string name="alert_fill_out_comment">Please write a comment</string>
    <string name="array_category_trip">travels</string>
    <string name="array_category_technology">tecnology</string>
    <string name="array_category_nature">nature</string>
    <string name="array_category_sport">sports</string>
    <string name="array_category_health">health</string>
    <string name="array_category_naval">nautical</string>
    <string name="array_category_work">work</string>
    <string name="alert_fill_out_fields_event">Please enter a title, a description and select a category for the event you want to share</string>
    <string name="message_no_event">No available events have been found for the selected interests</string>
    <string name="emoticon_very_happy">Blissful</string>
    <string name="emoticon_happy">Happy</string>
    <string name="emoticon_in_love">In love</string>
    <string name="emoticon_laughing">Laughing</string>
    <string name="emoticon_sat">Sad</string>
    <string name="emoticon_disappointed">Disappointed</string>
    <string name="emoticon_angry">Angry</string>
    <string name="emoticon_crying">Crying</string>
    <string name="how_you_feeling"><b>How do you feel?</b>\nSwipe your finger horizontally to see more feelings</string>
    <string name="choose_language"><b>Change language</b></string>
    <string name="save_changes">Save changes</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="italian">Italian</string>
    <string name="data_saved">Your data has been successfully saved</string>
    <string name="LOGIN_TEXT_USER">Username</string>
    <string name="LOGIN_TEXT_PASSWORD">Password</string>
    <string name="LOGIN_TEXT_LOGIN">Log in</string>
</resources>