<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.unir.grupo2.myzeancoach.ui.MEssentialInfo.VideosFragment">

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solution"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/comment_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:hint="@string/solution_hint"
                android:inputType="textMultiLine"
                android:maxHeight="100dp"
                android:textSize="@dimen/letra_menos_grande"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pros"
                android:textColor="@color/greenApp"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/pros_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:hint="@string/pros_hint"
                android:inputType="textMultiLine"
                android:textColor="@color/greenApp"
                android:maxHeight="100dp"
                android:textSize="@dimen/letra_menos_grande"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cons"
                android:textColor="@color/redApp"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/cons_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:hint="@string/cons_hint"
                android:inputType="textMultiLine"
                android:textColor="@color/redApp"
                android:maxHeight="100dp"
                android:textSize="@dimen/letra_menos_grande"/>

        </LinearLayout>

        <Button
            android:id="@+id/save_solution_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/save_solution"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/loading_message"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:contentDescription="@string/error_icon_description"
            android:src="@drawable/ic_error_black_24px"
            android:tint="#c3c3c3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/error_message"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>