<LinearLayout android:id="@+id/edit_name"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_completed_dialog"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puntuaction"/>

    <RatingBar
        android:id="@+id/score_ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:isIndicator="true"
        android:numStars="5"
        android:visibility="gone"/>

    <Button
        android:text="@string/OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@color/transparent"
        android:textColor="@color/colorAccent"
        android:id="@+id/button"/>

</LinearLayout>