<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.unir.grupo2.myzeancoach.ui.MCooperativeSol.AddDilemmaActivity">

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/title_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dilemma_title"
            android:inputType="textMultiLine"
            android:maxHeight="100dp"
            android:minHeight="100dp"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/description_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dilemma_description"
            android:inputType="textMultiLine"
            android:maxHeight="200dp"
            android:minHeight="200dp"
            android:padding="10dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/save_dilemma_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/colorAccent"
            android:text="@string/save_dilemma"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/loading_message"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:contentDescription="@string/error_icon_description"
            android:src="@drawable/ic_error_black_24px"
            android:tint="#c3c3c3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/error_message"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>