<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.unir.grupo2.myzeancoach.ui.MEssentialInfo.VideosFragment">

    <RelativeLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/emoticon_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/emoticon_imageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="20dp"
                        android:clickable="true"
                        app:srcCompat="@mipmap/ic_happy"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/how_you_feeling"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/emoticons_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="horizontal"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/choose_language"/>

                <RadioGroup
                    android:id="@+id/language_radioGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/spanish_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spanish"/>

                    <RadioButton
                        android:id="@+id/english_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/english"/>

                    <RadioButton
                        android:id="@+id/italian_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/italian"/>
                </RadioGroup>
            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:text="@string/save_changes"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/loading_message"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>