<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="10dp"
              android:orientation="vertical">

    <TextView
        android:id="@+id/state_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/greenApp"/>

    <EditText
        android:id="@+id/title_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="textMultiLine"
        android:minHeight="100dp"
        android:maxHeight="100dp"/>

    <EditText
        android:id="@+id/description_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:minHeight="120dp"
        android:maxHeight="120dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/greenApp"
        android:textStyle="bold"
        android:text="@string/suggestion_coach"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/coach_comments_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"/>
</LinearLayout>