<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_weight="20"
            android:gravity="center"
            android:text="@string/stress_detection"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/estress_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            android:scrollbars="vertical" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/loading_message" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:contentDescription="@string/error_icon_description"
            android:src="@drawable/ic_error_black_24px"
            android:tint="#c3c3c3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/error_message"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>